<resources>
    <string name="app_name">Currency Exchanger</string>
    <string name="currency_convertor">Currency Convertor</string>
    <string name="my_balance_txt">MY BALANCE</string>
    <string name="currency_exchange_txt">CURRENCY EXCHANGE</string>
    <string name="sell_txt">Sell</string>
    <string name="receive_txt">Receive</string>
    <string name="submit_txt">Submit</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="sell_currency_txt">pleas pick currency for sell</string>
    <string name="buy_currency_txt">pleas pick currency for buy</string>
    <string name="same_currency">both sell and receive currency cant be the same, please change one currency</string>
    <string name="ok">ok</string>
    <string name="done">done</string>
    <string name="succes_transaction">Transaction is Successful</string>
    <string name="empty_et">please enter a amount</string>
    <string name="sell_amount_higher">amount you enter is bigger than your balance and commission( first 5 tranaction is free )</string>
    <string name="titleConnectionError">Your device is not connected to Internet</string>
    <string name="msgConnectionError">for getting latest currency detail, we need to connect to our server.</string>
</resources>